--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ th{background:#0a7cff;color:#fff}
 </div>
 
 <script>
-const API_URL = "ВСТАВЬ_URL_APPS_SCRIPT";
+const API_URL = "const API_URL = "https://script.google.com/macros/s/AKfycbyDcnhGHF-Ck76yBZjIuiK6P5ftHLYg1PqyfNoLbnyiiBsQTOPkyEls2L8a5C5nFV3mlQ/exec";
+";
 
 let data = [];
 
@@ -69,3 +70,4 @@ loadData();
 
 </body>
 </html>
+
